--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "dps0340.github.io"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "이지호"
-description              : "계속 재미있게 공부하는 학부생의 삶을 살고 있습니다."
+description              : "C언어, 운영체제, 웹 관련으로 배운것을 적어두는 블로그입니다."
 url                      : "https://dps0340.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dps0340/dps0340.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
